# email-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample_emails.json
src/agents/: __init__.py  email_agent.py
src/chains/: __init__.py  llm.py  reply.py  summarize.py  triage.py
src/models/: __init__.py  email.py
src/providers/: __init__.py  base.py  local.py
src/ui/: app.py
src/utils/: config.py  llm.py
tests/: test_agent.py  test_models.py  test_providers.py
